--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 * {
-	/* outline: 1px dotted gray; */
+	outline: 1px dotted gray;
 }
 
 body, html, .main {
@@ -78,6 +78,24 @@ left: 300px; */
 	
 	padding-top: 30px;
 }
+
+.project {
+  width:  200px;
+  height: 150px;
+  border: 1px solid;
+  text-align: center;
+	background-color: red;
+	margin: 10px;
+}
+
+#grid {
+	text-align: center;
+	top: 7%;
+	//margin-top: 50%;
+	left: 8.9%;
+      margin: 0 auto;
+}
+
 
 /*
 * {
